Fix project name.

--- a/relx.config
+++ b/relx.config
@@ -1,2 +1,2 @@
-{release, {momental_storage, "0.1"}, [momental_storage]}.
+{release, {one_time_storage, "0.1"}, [one_time_storage]}.
 {extended_start_script, true}.
